--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/plugin-transform-async-generator-functions": "^7.25.8",
     "@babel/plugin-transform-object-rest-spread": "^7.25.8",
     "@babel/plugin-transform-optional-chaining": "^7.25.8",
+    "expo": "^51.0.38",
     "glob": "^11.0.0",
     "rimraf": "^6.0.1",
     "uuid": "^10.0.0"
